syntax = "proto3";

package event.v1;

service EventService {
  // RegisterEvent registers an event as being done by a user
  rpc RegisterEvent(RegisterEventRequest) returns (RegisterEventResponse) {}
}

enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  SDK_CALL = 1;
}

enum SDKCallType {
    SDKCallType_UNSPECIFIED = 0;
    RAW = 1;
    MIDDLEWARE_CALL = 2;
}

message RegisterEventRequest {
    EventType type = 1;
    string userId = 2;
    oneof data {
        SDKCall sdkCall = 3;
    }
}

message SDKCall {
    SDKCallType sdkCallType = 1;
    float debitAmount = 2;
}

message RegisterEventResponse {
    string random = 1;
}
